Fix spacing of list elements
Recently published docs have a very long date field which runs into the status. Make li wider to stop this.

--- a/app/assets/stylesheets/_document-list.scss
+++ b/app/assets/stylesheets/_document-list.scss
@@ -24,7 +24,7 @@
 
     li {
       display: inline-block;
-      min-width: 200px;
+      min-width: 300px;
     }
 
     li.actions a {
